--- a/menuStyle.css
+++ b/menuStyle.css
@@ -1,4 +1,3 @@
-
 .menu {
     width: 100%;
     display: flex;
@@ -99,4 +98,29 @@ body {
     color: white !important;
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out;
+}
+
+/* Estilos para el logo en el header */
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.header-logo {
+    height: 30px;
+    width: auto;
+    margin-right: 10px;
+}
+
+/* Media queries para responsive */
+@media screen and (max-width: 768px) {
+    .card {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .card {
+        width: 100%;
+    }
 }
